cmake_minimum_required(VERSION 3.10)
project(lemonade VERSION 1.0.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(CMAKE_SYSTEM_NAME MATCHES "Linux")
    add_definitions(-DOS_LINUX)
    set(PLATFORM_LIBS pthread)
elseif(CMAKE_SYSTEM_NAME MATCHES "Darwin")
    add_definitions(-DOS_MACOS)
    set(PLATFORM_LIBS pthread)
elseif(CMAKE_SYSTEM_NAME MATCHES "Windows")
    add_definitions(-DOS_WINDOWS)
    set(PLATFORM_LIBS ws2_32 iphlpapi)
endif()
include_directories(include)
file(GLOB_RECURSE SRC_FILES "src/*.cpp")
add_executable(lemonade ${SRC_FILES})
target_link_libraries(lemonade ${PLATFORM_LIBS})
